--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <--! code taken from Khan Academy's HTML/CSS course -->
+  <!-- code taken from Khan Academy's HTML/CSS course -->
     <head>
         <meta charset="utf-8">
         <title>Project: Blog</title>
